using connection pooling in the db, added logging for authentication